--- a/site/Cargo.toml
+++ b/site/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "nasaapodviewer-frontend"
-version = "1341.0.0"
+name = "nasa-imagery-viewer-site"
+version = "1.46.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.34"
+console_error_panic_hook = "0.1.7"
 gloo-net = { version = "0.5.0", features = [ "json" ]}
+log = "0.4.22"
+secrecy = "0.8.0"
 serde = { version = "1.0.196", features = ["derive"] }
 url = "2.5.0"
 wasm-bindgen-futures = "0.4.41"
+wasm-logger = "0.2.0"
 yew = { version = "0.21.0", features = ["csr"] }
