--- a/site/Cargo.toml
+++ b/site/Cargo.toml
@@ -3,6 +3,14 @@ name = "nasa-imagery-viewer-site"
 version = "1.46.0"
 edition = "2021"
 
+[[bin]]
+name = "nasa-imagery-viewer-site"
+path = "src/bin/main.rs"
+
+[lib]
+name = "nasa_imagery_viewer_site_lib"
+path = "src/lib/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
