--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "nasa-imagery-viewer-server"
-version = "1.47.0"
+authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
+version = "1.0.0"
 edition = "2021"
-authors = [ "Jeffery D. Mitchell", "<sentinl1909@jeff-mitchell.dev>" ]
+description = "A full stack site, built with Axum and Yew, that fetches and displays the daily image/video from the NASA APOD API"
+readme = "README.md"
+repository = "https://github.com/sentinel1909/nasa-imagery-viewer.git"
+license = "MIT"
 publish = false
 
 [dependencies]
-rocket = "0.5.0"
-shuttle-rocket = "0.47.0"
+axum = "0.7.5"
+shuttle-axum = "0.47.0"
 shuttle-runtime = "0.47.0"
-tokio = "1"
+tower-http = { version = "0.5.2", features = [ "fs"] }
